--- a/src/sass/_more.scss
+++ b/src/sass/_more.scss
@@ -1,7 +1,8 @@
 .more {
+	position: relative;
 	padding-left: 15rem;
 	padding-block: 10rem;
-	backdrop-filter: blur(2rem);
+	backdrop-filter: blur(1rem);
 	background-color: transparentize($color-white, 0.4);
 
 	display: grid;
@@ -17,8 +18,17 @@
 	// transform: translateY(-100%);
 
 	&__info {
+		display: flex;
+		flex-direction: column;
+
 		& > :not(:last-child) {
 			margin-bottom: 0.5rem;
+		}
+
+		@media only screen and (max-width: $bp-small) {
+			flex-direction: row;
+			align-items: center;
+			justify-content: space-between;
 		}
 	}
 
@@ -36,5 +46,34 @@
 
 	& > *:last-child {
 		grid-area: week;
+	}
+
+	&__bar {
+		position: absolute;
+		background-color: lighten($color-black-light, 40%);
+		height: 230%;
+		width: 1px;
+		inset: -15rem -13rem;
+
+		@media only screen and (max-width: $bp-big) {
+			inset: -15rem -6rem;
+		}
+
+		@media only screen and (max-width: $bp-medium) {
+			display: none;
+		}
+	}
+
+	@media only screen and (max-width: $bp-medium) {
+		padding-inline: 4rem;
+	}
+
+	@media only screen and (max-width: $bp-small) {
+		grid-template-columns: 1fr;
+		grid-template-areas:
+			'timezone'
+			'day'
+			'year'
+			'week';
 	}
 }
