--- a/src/sass/_clock.scss
+++ b/src/sass/_clock.scss
@@ -2,9 +2,6 @@
 	display: flex;
 	justify-content: space-between;
 
-	&__main {
-	}
-
 	&__welcome {
 		display: flex;
 		align-items: center;
@@ -15,5 +12,9 @@
 		height: 3rem;
 
 		margin-right: 1rem;
+	}
+
+	@media only screen and (max-width: $bp-medium) {
+		flex-direction: column;
 	}
 }
