--- a/src/sass/_quote.scss
+++ b/src/sass/_quote.scss
@@ -3,6 +3,7 @@
 	display: flex;
 	align-items: flex-start;
 	margin-bottom: 30rem;
+	transition: visibility 0.8s, transform 1s;
 
 	&__text {
 		width: 80%;
